--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -12,3 +12,16 @@ html, body {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 100ms ease-in;
+}
+
+.ReactModal__Overlay--after-open{
+    opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+    opacity: 0;
+}
